--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Cristian Collazos</h1>
-            <h2>Software Engineer</h2>
+            <h2>Tech Leader & Full Stack Developer | Specialist in WordPress, React JS, Node.js, and
+                OpenCart E-commerce Platforms</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
