--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Cristian Collazos</h1>
-            <h2>Tech Leader & Full Stack Developer | Specialist in WordPress, React JS, Node.js, and
-                OpenCart E-commerce Platforms</h2>
+            <h2>Tech Leader & Full Stack Developer | Specialist in WordPress, WooCommerce, Shopify, OpenCart, <br/>and E-commerce Platforms</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -74,9 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Full Stack Developer with over 12 years of experience specializing in WordPress, WooCommerce, Shopify, and custom plugin development. I have a proven track record of leading development teams and defining technology strategies for scalable, impactful projects. I have extensive expertise in React JS and Node.js (with Express on the backend), applying the MVC model and managing connections to both relational databases like MySQL and non-relational databases like MongoDB.
+                        I am also skilled in OpenCart, with strong knowledge of PHP, JavaScript, CSS, and HTML, delivering customized solutions for e-commerce and LMS platforms. I am passionate about performance optimization, full-cycle development, and integrating advanced technologies to drive business growth.
                     </p>
                 </div>
             </div>
@@ -87,29 +85,93 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            <div data-date="October 2017 – Present">
+                <h3>NETEXPERTOS.CL</h3>
+                <h4>CTO, Full Stack Web Developer</h4>
+                <p style="text-align: justify">
+                    As a Full Stack Web Developer, I delivered comprehensive web development solutions for various projects, combining expertise in both frontend and backend technologies. My role included everything from initial consultation to final delivery, ensuring high-quality results tailored to client needs.
+                    -	Core Skills and Technologies: JavaScript, Node.js, Angular, PHP, React.js, React Native, Git, Digital Marketing, E-commerce Development.
+
+                    <br/><br/>Responsibilities:
+                    <br/><br/>-	Full Stack Development: Designed and developed robust web applications using a diverse technology stack to meet client specifications and project requirements.
+                    <br/><br/>-	E-commerce Solutions: Implemented and customized e-commerce platforms, integrated payment gateways, optimized user experience, and ensured secure transactions.
+                    <br/><br/>-	Digital Marketing: Developed and executed digital marketing strategies to enhance online presence and drive customer engagement.
+                    <br/><br/>-	Project Management: Managed all phases of development projects, from planning and design to coding and deployment, ensuring timely and successful completion.
+                    <br/><br/>-	Client Interaction: Collaborated with clients to understand their needs, provided technical advice, and delivered solutions aligned with their business goals.
+
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            <div data-date="October 2017 – Present">
+                <h3>GOENVIOS</h3>
+                <h4>CTO, Full Stack Android Developer </h4>
+                <p style="text-align: justify">
+                    Led the development of an Android mobile application designed to manage customer  shipments. Responsible for the entire design and development process, utilizing Android Native and RESTful services with Node.js.
+                    <br/><br/>Responsibilities:
+                    <br/><br/>-	Application Design: Spearheaded the design of a user-friendly interface for the mobile application to ensure a seamless user experience.
+                    <br/><br/>-	Development: Developed the application using Android Native to leverage platform-specific features for optimal performance.
+                    <br/><br/>-	Backend Integration: Implemented RESTful services with Node.js to enable efficient communication between the mobile application and backend systems.
+                    <br/><br/>-	Project Leadership: Oversaw the project from concept to completion, ensuring adherence to deadlines and quality standards.
+                                    </p>
+            </div>
+
+            <div data-date="October 2017 – Present">
+                <h3>MATTANGA</h3>
+                <h4>Lead Developer</h4>
+                <p style="text-align: justify">
+                    Directed the development of a comprehensive e-commerce platform and a mobile application, enhancing the company's digital presence and functionality.
+                    E-commerce Platform: Led the development of a robust e-commerce platform utilizing JavaScript and PHP, focusing on creating a scalable and user-friendly online shopping experience.
+                    Mobile Application: Developed a mobile platform using React Native, integrating it with PHP web services to provide a seamless and interactive user experience across devices.
+                    <br/><br/>Contributions:
+                    <br/><br/>-	System Architecture: Designed and implemented the system architecture for both the web and mobile applications, ensuring integration and performance optimization.
+                    <br/><br/>-	Feature Development: Implemented key features and functionalities to meet business requirements and enhance user engagement.
+                    <br/><br/>-	Cross-functional Collaboration: Worked closely with stakeholders and team members to ensure project alignment with business goals and timely delivery.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            <div data-date="November 2014 – October 2017">    
+                <h3>Play Technologies S.A.S</h3>
+                <h4>Technical Project Lead</h4>
+                <p style="text-align: justify">
+                    Oversaw the development and integration of IT solutions across mobile and web platforms at Play Technologies S.A.S. Led a team of six developers, managing project workflows and ensuring high-quality deliverables.
+                    <br/><br/> -	Team Leadership: Managed and guided a team of six developers, coordinating tasks and optimizing project workflows to meet deadlines and client expectations.
+                    <br/><br/>-	Client Solutions: Provided end-to-end solutions for clients, collaborating with cross-functional teams to address their needs and deliver tailored results.
+                    <br/><br/>-	Project Management: Consistently achieved short-term and long-term project goals through effective planning, execution, and monitoring.
+                    <br/><br/>-	Process Improvement: Actively participated in meetings to develop and implement new practices and methodologies, enhancing overall team efficiency.                  
+                    <br/><br/>-	Client Interaction: Engaged with clients via calls, emails, and face-to-face meetings to address their inquiries and provide support throughout the project lifecycle.   
                 </p>
             </div>
+
+            <div data-date="February 2012 – November 2014">    
+                <h3>Thinker S.A.S | Parquesoft Colombia</h3>
+                <h4>Full Stack Mobile and Web Developer</h4>
+                <p style="text-align: justify">
+                    Contributed to the development of software solutions at PARQUESOFT, a non-profit organization dedicated to fostering the creation and growth of technology companies. Played a key role in the MinTic Kiosk project, delivering front-end development solutions.
+                    <br/><br/>-	Project Contribution: Worked on the MinTic Kiosk project, developing user interfaces and ensuring seamless functionality for a government-backed initiative.
+                    <br/><br/>-	Front-End Development: Implemented responsive and intuitive designs, focusing on user experience and cross-platform compatibility.
+                    <br/><br/>-	Collaboration: Collaborated with cross-disciplinary teams to meet project milestones and deliver high-quality software solutions.
+                    <br/><br/>-	Technologies Used: Applied best practices in front-end development, utilizing technologies such as HTML, CSS, JavaScript, and related frameworks to deliver optimal performance.
+                    
+                    <br/><br/>Led web development projects for a design firm specializing in the betting sector. Developed Thinker Reports, a reporting system successfully sold to industry clients.
+                    <br/><br/>-	Project Lead: Promoted in November 2012 to oversee project development and delivery.
+                    <br/><br/>-	Technologies: Worked with PHP, JavaScript, MySQL, and Linux environments.
+                    <br/><br/>-	System Development: Created a reporting system tailored to betting firms' needs.
+                    <br/><br/>-	Client Collaboration: Interacted with clients to deliver customized solutions.
+
+                </p>
+            </div>
+
+            <div data-date="August 2009 – February 2012">    
+                <h3>Play technologies S.A.S</h3>
+                <h4>Junior Php, HTML and JavaScript Developer</h4>
+                <p style="text-align: justify">
+                    Contributed to the development and integration of IT solutions for mobile and web platforms. Focused on designing and building web applications for various client projects.
+                    <br/><br/>-	Web Development: Designed and developed web applications using PHP, JavaScript, Java, MySQL, and PostgreSQL.
+                    <br/><br/>-	Cross-Platform Solutions: Worked on projects that integrated both mobile and web platforms, ensuring seamless performance across devices.
+                    <br/><br/>-	Collaboration: Engaged with development teams to deliver efficient, scalable, and user-friendly web solutions.
+                </p>
+            </div>
+
         </div>
     </div>
     <!-- End #experience -->
