--- a/index.html
+++ b/index.html
@@ -179,28 +179,22 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Universidad Nacional UNAD</h3>
+            <span class="education-date">Sept 2016 - </span>
+            <h4>System Engineer </h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                As a Systems Engineer, I specialize in designing, developing, and implementing technological solutions to address IT challenges. I focus on system analysis, programming, database management, and network integration to create efficient and secure applications that meet user needs and business requirements
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Servico nacional de aprendizaje (SENA)</h3>
+            <span class="education-date">Sept 2007 - Sept 2010</span>
+            <h4>Systems Analyst and Developer</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    The Systems Analyst and Developer designs, develops, implements, and maintains IT systems to optimize business processes. They analyze user needs and translate them into efficient technological solutions using programming languages and databases, ensuring systems function correctly and continuously improve
                 </li>
             </ul>
         </div>
